@@ -1138,8 +1138,9 @@ DRIVERNV(iomoon)        // Io Moon (1994)
 // ----------------
 // SONIC
 // ----------------
-                        // Night Fever (1979)
-                        // Storm (1979)
+DRIVERNV(thrdwrld)      // Third World (1978)
+DRIVERNV(ngtfever)      // Night Fever (1979)
+                        // Storm (1979) - Williams "Flash" clone
 DRIVERNV(odin_dlx)      // Odin De Luxe (1985)
 DRIVERNV(gamatros)      // Gamatron (1986)
 DRIVERNV(solarwar)      // Solar Wars (1986)
